ingress-partner-hml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":[""],"port":443,"protocol":"HTTPS","serviceName":"homolog:partner-proxy-release-140-svc","ingressName":"homolog:partner-proxy-ingress","hostname":"partner-proxy.homolog.psd.pernambucanas.com.br","path":"/","allNodes":false}]'
    ingress.kubernetes.io/service-upstream: "true"
    kubernetes.io/ingress.class: controller-partner-proxy
    nginx.ingress.kubernetes.io/proxy-body-size: 4m
    nginx.ingress.kubernetes.io/whitelist-source-range: 187.84.178.237/32,35.235.0.154/32,35.235.0.155/32,179.235.198.95/32,200.25.46.224/27,170.83.215.128/28,200.155.60.240/28,179.191.185.0/24,179.191.187.0/24,187.19.192.160/27,189.4.5.64/28,179.191.166.0/24,201.17.169.96/28,167.249.160.16/28,66.206.21.216/29,201.17.29.16/28,152.255.34.80/28,185.76.9.93/32,201.78.203.0/27,206.41.74.0/28,187.33.240.240/28,200.160.97.176/28,179.191.190.0/24,84.17.42.237/32,200.55.243.48/28,200.179.70.48/28,200.24 [...]
  name: partner-proxy-ingress-apigee-1.3
  namespace: homolog
spec:
  rules:
  - host: '*.psd.pernambucanas.com.br'
    http:
      paths:
      - backend:
          service:
            name: partner-proxy-release-193-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
